# KSkernelOS

./: Cargo.toml  README.md  kernel.ld  start.sh
.cargo/: config.toml
src/: main.rs
src/drivers/vga/xd8000/: mod.rs  println.rs  text.rs
src/set_macros/vga_macros/: println.rs
src/task/: task.rs
