[package]
name = "KSkernelOS"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.x86_64-kernel]
runner = "echo"  # просто заглушка, щоб cargo не намагався запускати
rustflags = ["-C", "link-args=-nostartfiles"]

[build]
target = "x86_64-kernel.json"


[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]


[dependencies]
bootloader = "0.9"

